Implementacion del formulario jugador

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Nombre</th>
+            <th>Nombres</th>
             <th>Edad</th>
-            <th>Equipo</th>
+            <th>Equipos</th>
         </tr>
     </thead>
     <tbody>
